Send monthly email to admin

--- a/users/locale/vi/LC_MESSAGES/django.po
+++ b/users/locale/vi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-08-21 11:08+0700\n"
+"POT-Creation-Date: 2020-09-07 17:00+0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,31 +16,32 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
-#: templates/registration/login.html:34
+#: users/templates/registration/login.html:10
+msgid "Login"
+msgstr "Đăng nhập"
+
+#: users/templates/registration/login.html:20
 msgid "Create new user account:"
-msgstr " Tạo Tài Khoản"
+msgstr "Tạo tài khoản mới"
 
-#: templates/registration/login.html:35
+#: users/templates/registration/login.html:21
 msgid "Forgot your password?"
-msgstr "Có phải bạn quên mật khẩu hay không ?"
+msgstr "Quên mật khẩu"
 
-#: templates/registration/signup.html:9
+#: users/templates/registration/signup.html:10
 msgid "Create new account"
-msgstr "Nếu thích, Hãy tạo một tài khoản "
+msgstr "Tạo tài khoản mới"
 
-#: templates/registration/signup.html:13
+#: users/templates/registration/signup.html:15
 msgid "Register"
-msgstr "Đăng Ký"
+msgstr "Đăng kí"
 
-#: templates/registration/signup.html:15
+#: users/templates/registration/signup.html:20
 msgid "Do you have a account"
 msgstr "Bạn đã có tài khoản"
 
-#: templates/registration/signup.html:15
+#: users/templates/registration/signup.html:20
 msgid "Click here to Login"
-msgstr "Bấm vào để Login"
-
-#: views.py:26
-msgid "Now you are registered, try to log in!"
-msgstr "Đăng ký thành công , Hãy đăng nhập"
+msgstr "Ấn để đăng nhập"
